--- a/index.html
+++ b/index.html
@@ -3,8 +3,30 @@
 	<head>
 		<title>GIT</title>
 	</head>
+	<style>
+		#display {
+		width:100vw;
+		height:100vh;
+		position:fixed;
+		left:0;
+		top:0;
+		background-color:#1F9;
+		}
+		
+		#button {
+		width:200px;
+		height:75px;
+		position:absolute;
+		left:0;
+		right:0;
+		top:0;
+		bottom:0;
+		margin:auto;
+		}
+	</style>
 	<body>
-		Hey!
+		<div id='display'>
+		<button id='button'>Click here</button>
 	</body>
 </html>	
 	
